tests/snapshots/render/iterm2@commonmark-spec-236-block_quotes.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/236-block_quotes.md
snapshot_kind: text
---
  [32m╭────────────────────────────────────────────────────────────────────────────╮[0m
  [32m│ [0m[3m[33mfoo[0m                                                                       [32m │[0m
  [32m╰────────────────────────────────────────────────────────────────────────────╯[0m

[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mbar[0m                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
