tests/snapshots/render/iterm2@commonmark-spec-249-block_quotes.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/249-block_quotes.md
snapshot_kind: text
---
[90m▌ [0m[3mbar[0m

baz
